syntax = "proto3";
package joltify.mint;


import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/joltify-finance/joltify_lending/x/mint/types";


message HistoricalDistInfo{
  google.protobuf.Timestamp payout_time = 1 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"first_dist_time\""
  ];
  uint64 distributed_round = 2;
}
