syntax = "proto3";
package joltify.mint;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "joltify/mint/params.proto";
import "joltify/mint/dist.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/joltify-finance/joltify_lending/x/mint/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/joltify-finance/joltify_lending/mint/params";
  }

  // Distribution queries the parameters of the module.
  rpc Distribution(QueryHistoryDistRequest) returns (QueryHistoryDistResponse) {
    option (google.api.http).get = "/joltify-finance/joltify_lending/mint/dist";
  }
  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryHistoryDistRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryHistoryDistResponse {
  // params holds all the parameters of this module.
  HistoricalDistInfo history= 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3
